# kinetic-audio

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: basic_playback.rs  sprites.rs
scripts/: publish-crates-io.sh
src/: lib.rs  manager.rs  math.rs  mixer.rs  sound.rs  spatial.rs  sprite.rs  tween.rs
src/backend/: cpal.rs  mod.rs  null.rs  web.rs
src/decode/: mod.rs  symphonia.rs  wav.rs
src/effects/: biquad.rs  delay.rs  mod.rs
tests/: integration.rs
